--- a/config/content.htm
+++ b/config/content.htm
@@ -1,7 +1,8 @@
 <h1>About</h1>
+<p></p>
 <p><img alt="" height="953" src="/images/螢幕擷取畫面 2022-10-27 095204.png" width="1920"/></p>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
-<p></p>
+<p><img alt="" height="285" src="/images/螢幕擷取畫面 2022-10-27 222946.png" width="266"/></p>
 <h1>cp2022</h1>
 <p></p>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
@@ -566,6 +567,10 @@ doc["aitetris"].bind("click", aitetris.do)
 <p></p>
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
+<div style="width: 100%; height: 100%;"></div>
+<div style="width: 100%; height: 100%;"></div>
+<div style="width: 100%; height: 100%;"></div>
+<div style="width: 100%; height: 100%;"></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
 <!-- editor2 結束 --><hr/>
