--- a/content/Brython.html
+++ b/content/Brython.html
@@ -418,6 +418,10 @@ doc["aitetris"].bind("click", aitetris.do)
 <p></p>
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
+<div style="width: 100%; height: 100%;"></div>
+<div style="width: 100%; height: 100%;"></div>
+<div style="width: 100%; height: 100%;"></div>
+<div style="width: 100%; height: 100%;"></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
 <!-- editor2 結束 --><hr/><br />cp2022 << <a href='cp2022.html'>Previous</a> </div>
