在cp2022頁面加入WH1

--- a/content/About.html
+++ b/content/About.html
@@ -142,10 +142,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='cp2022.html'>Next</a> >> cp2022<br /><h1>About</h1>
+<p></p>
 <p><img alt="" height="953" src="./../images/螢幕擷取畫面 2022-10-27 095204.png" width="1920"/></p>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
-<p></p>
-<br /> <a href='cp2022.html'>Next</a> >> cp2022</div>
+<p></p><br /> <a href='cp2022.html'>Next</a> >> cp2022</div>
         
     <!-- footer -->
       <div class="container">
