--- a/config/content.htm
+++ b/config/content.htm
@@ -1,7 +1,9 @@
 <h1>About</h1>
 <h1>HW</h1>
 <h2>w10</h2>
+<p><a href="https://mdecp2022.github.io/site-a0408258/content/Brython.html?src=https://gist.githubusercontent.com/a0408258/e8c7f029cfff6cb22dc89a94b7d186e6/raw/6f99cb3ca98811eb0f5a328e92bdd91e2eda4201/w10.py">hw-1</a></p>
 <h2>w11</h2>
+<p><a href="https://mdecp2022.github.io/site-a0408258/content/Brython.html?src=https://gist.githubusercontent.com/a0408258/09754d0a7b5dd5ece3917c50be88dd86/raw/9d3824e9c2c246115d551105661fee697eb26e7a/w11.py">hw-1</a></p>
 <h2>w12</h2>
 <p></p>
 <p><img alt="" height="953" src="/images/螢幕擷取畫面 2022-10-27 095204.png" width="1920"/></p>
