--- a/content/w10.html
+++ b/content/w10.html
@@ -142,6 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">HW << <a href='HW.html'>Previous</a> <a href='w11.html'>Next</a> >> w11<br /><h1>w10</h1>
+<p><a href="https://mdecp2022.github.io/site-a0408258/content/Brython.html?src=https://gist.githubusercontent.com/a0408258/e8c7f029cfff6cb22dc89a94b7d186e6/raw/6f99cb3ca98811eb0f5a328e92bdd91e2eda4201/w10.py">hw-1</a></p>
 <br />HW << <a href='HW.html'>Previous</a> <a href='w11.html'>Next</a> >> w11</div>
         
     <!-- footer -->
