--- a/content/w11.html
+++ b/content/w11.html
@@ -142,6 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>w11</h1>
+<p><a href="https://mdecp2022.github.io/site-a0408258/content/Brython.html?src=https://gist.githubusercontent.com/a0408258/09754d0a7b5dd5ece3917c50be88dd86/raw/9d3824e9c2c246115d551105661fee697eb26e7a/w11.py">hw-1</a></p>
 <br />w10 << <a href='w10.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
         
     <!-- footer -->
