--- a/config/content.htm
+++ b/config/content.htm
@@ -7,8 +7,25 @@
 <p><a href="https://mdecp2022.github.io/site-a0408258/content/Brython.html?src=https://gist.githubusercontent.com/a0408258/09754d0a7b5dd5ece3917c50be88dd86/raw/9d3824e9c2c246115d551105661fee697eb26e7a/w11.py">hw-1</a></p>
 <h2>w12</h2>
 <p></p>
-<h2>w15</h2>
+<h2>w14</h2>
 <p></p>
+<h2>w15</h2>
+<div>
+<ul>
+<li>為何學習計算機程式需要建立個人倉儲?</li>
+<li>A:倉儲就像雲端 可以儲存網頁所需檔案</li>
+</ul>
+<ul>
+<li>全球資訊網能夠提供甚麼功能或有什麼優點?</li>
+<li><span>A:許多互相連結的超文字</span><span>組成的資訊系統</span></li>
+<li>Replit, stud.cycu.org 與 localhost 分別代表甚麼?</li>
+<li>A:</li>
+<li>https, ssh 到底提供使用者那些功能或優點?</li>
+<li>Brython 與 Python 有甚麼差別?</li>
+<li>能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</li>
+<li>變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</li>
+</ul>
+</div>
 <p></p>
 <p></p>
 <p><img alt="" height="953" src="/images/螢幕擷取畫面 2022-10-27 095204.png" width="1920"/></p>
