--- a/content/w15.html
+++ b/content/w15.html
@@ -141,9 +141,29 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w12</h1>
+    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='cp2022.html'>Next</a> >> cp2022<br /><h1>w15</h1>
+<div>
+<ul>
+<li>為何學習計算機程式需要建立個人倉儲?</li>
+<li>A:倉儲就像雲端 可以儲存網頁所需檔案</li>
+</ul>
+<ul>
+<li>全球資訊網能夠提供甚麼功能或有什麼優點?</li>
+<li><span>A:許多互相連結的超文字</span><span>組成的資訊系統</span></li>
+<li>Replit, stud.cycu.org 與 localhost 分別代表甚麼?</li>
+<li>A:</li>
+<li>https, ssh 到底提供使用者那些功能或優點?</li>
+<li>Brython 與 Python 有甚麼差別?</li>
+<li>能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</li>
+<li>變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</li>
+</ul>
+</div>
 <p></p>
-<br />w11 << <a href='w11.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
+<p></p>
+<p><img alt="" height="953" src="./../images/螢幕擷取畫面 2022-10-27 095204.png" width="1920"/></p>
+<p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
+<p></p>
+<br />w14 << <a href='w14.html'>Previous</a> <a href='cp2022.html'>Next</a> >> cp2022</div>
         
     <!-- footer -->
       <div class="container">
