--- a/content/cp2022.html
+++ b/content/cp2022.html
@@ -143,7 +143,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w15 << <a href='w15.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>cp2022</h1>
 <p>H1</p>
-<p></p>
+<p><img alt="" height="953" src="./../images/螢幕擷取畫面 2022-10-27 095204.png" width="1920"/></p>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
