--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -21,9 +21,16 @@
 <li>Replit, stud.cycu.org 與 localhost 分別代表甚麼?</li>
 <li>A:</li>
 <li>https, ssh 到底提供使用者那些功能或優點?</li>
+<li><code>A:</code></li>
+<li><code>https</code>: 在上傳時需要輸入帳密，如果不需要大多是帳密(Key Chain)已存在電腦內。</li>
+<li><code>ssh</code>: 已先在電腦內設定好金鑰，上傳時不需要輸入額外帳密。</li>
+<li></li>
 <li>Brython 與 Python 有甚麼差別?</li>
+<li>A:<span>Python可處理較多</span></li>
 <li>能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</li>
+<li>程式是正常的</li>
 <li>變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</li>
+<li>A:</li>
 </ul>
 </div>
 <p></p>
