--- a/content/w17.html
+++ b/content/w17.html
@@ -2,6 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -140,8 +141,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='HW.html'>Next</a> >> HW<br /><h1>About</h1>
-<br /> <a href='HW.html'>Next</a> >> HW</div>
+    <div id="tipue_search_content">w15 << <a href='w15.html'>Previous</a> <a href='cp2022.html'>Next</a> >> cp2022<br /><h1>w17</h1>
+<p></p>
+<p></p>
+<p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
+<p></p>
+<br />w15 << <a href='w15.html'>Previous</a> <a href='cp2022.html'>Next</a> >> cp2022</div>
         
     <!-- footer -->
       <div class="container">
