--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -6,7 +6,7 @@
 <h2>w11</h2>
 <p><a href="https://mdecp2022.github.io/site-a0408258/content/Brython.html?src=https://gist.githubusercontent.com/a0408258/09754d0a7b5dd5ece3917c50be88dd86/raw/9d3824e9c2c246115d551105661fee697eb26e7a/w11.py">hw-1</a></p>
 <h2>w12</h2>
-<p>你好</p>
+<p></p>
 <h2>w14</h2>
 <p></p>
 <h2>w15</h2>
@@ -27,7 +27,7 @@
 <li></li>
 <li>Brython 與 Python 有甚麼差別?</li>
 <li>A:<span>Python可處理較多</span></li>
-<li>能夠直接在瀏覽器中以 Brython 繪製中華民國國旗,綠色方塊在方塊格點中任意移動, 代表甚麼? 或模擬</li>
+<li>能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</li>
 <li>程式是正常的</li>
 <li>變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</li>
 <li>A:</li>
