--- a/content/w15.html
+++ b/content/w15.html
@@ -159,7 +159,7 @@ img.add_border {
 <li></li>
 <li>Brython 與 Python 有甚麼差別?</li>
 <li>A:<span>Python可處理較多</span></li>
-<li>能夠直接在瀏覽器中以 Brython 繪製中華民國國旗,綠色方塊在方塊格點中任意移動, 代表甚麼? 或模擬</li>
+<li>能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</li>
 <li>程式是正常的</li>
 <li>變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</li>
 <li>A:</li>
